@@ -8,9 +8,9 @@ import com.reservapp.backend.repository.EmpresaRepository;
 import com.reservapp.backend.repository.ServicioRepository;
 import com.reservapp.backend.service.ServicioService;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ServicioServiceImpl implements ServicioService {
@@ -18,25 +18,29 @@ public class ServicioServiceImpl implements ServicioService {
     private final ServicioMapper servicioMapper;
     private final EmpresaRepository empresaRepository;
 
-    public ServicioServiceImpl(ServicioRepository servicioRepository, ServicioMapper servicioMapper,  EmpresaRepository empresaRepository) {
+    public ServicioServiceImpl(ServicioRepository servicioRepository, ServicioMapper servicioMapper,
+                               EmpresaRepository empresaRepository) {
         this.servicioRepository = servicioRepository;
         this.servicioMapper = servicioMapper;
         this.empresaRepository = empresaRepository;
     }
 
     @Override
+    @Transactional
     public ServicioDTO crearServicio(ServicioDTO dto) {
         Servicio servicio = servicioMapper.toEntity(dto);
 
-        servicio.setEmpresa(empresaRepository.findById(dto.getIdEmpresa()).orElseThrow(() -> new ResourceNotFoundException("Empresa no encontrada")));
+        servicio.setEmpresa(empresaRepository.findById(dto.getIdEmpresa())
+                .orElseThrow(() -> new ResourceNotFoundException("Empresa no encontrada")));
 
-        Servicio guardado = servicioRepository.save(servicio);
-        return servicioMapper.toDTO(guardado);
+        return servicioMapper.toDTO(servicioRepository.save(servicio));
     }
 
     @Override
+    @Transactional
     public ServicioDTO actualizarServicio(Long id, ServicioDTO dto) {
-        Servicio servicio = servicioRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Servicio no encontrado"));
+        Servicio servicio = servicioRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Servicio no encontrado"));
 
         servicio.setNombre(dto.getNombre());
         servicio.setDescripcion(dto.getDescripcion());
@@ -44,7 +48,8 @@ public class ServicioServiceImpl implements ServicioService {
         servicio.setPrecio(dto.getPrecio());
 
         if (dto.getIdEmpresa() != null) {
-            servicio.setEmpresa(empresaRepository.findById(dto.getIdEmpresa()).orElseThrow(() -> new ResourceNotFoundException("Empresa no encontrada")));
+            servicio.setEmpresa(empresaRepository.findById(dto.getIdEmpresa())
+                    .orElseThrow(() -> new ResourceNotFoundException("Empresa no encontrada")));
         }
 
         return servicioMapper.toDTO(servicioRepository.save(servicio));
@@ -52,26 +57,27 @@ public class ServicioServiceImpl implements ServicioService {
 
     @Override
     public ServicioDTO obtenerServicioPorId(Long id) {
-        Servicio servicio = servicioRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Servicio no encontrado"));
+        Servicio servicio = servicioRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Servicio no encontrado"));
         return servicioMapper.toDTO(servicio);
     }
 
     @Override
     public List<ServicioDTO> listarServicios() {
-        return servicioRepository.findAll().stream().map(servicioMapper::toDTO).collect(Collectors.toList());
+        return servicioRepository.findAll().stream().map(servicioMapper::toDTO).toList();
     }
 
     @Override
     public List<ServicioDTO> listarServiciosPorEmpresa(Long idEmpresa) {
-        return servicioRepository.findByEmpresaId(idEmpresa).stream().map(servicioMapper::toDTO).collect(Collectors.toList());
+        return servicioRepository.findByEmpresaId(idEmpresa).stream().map(servicioMapper::toDTO).toList();
     }
 
     @Override
+    @Transactional
     public void eliminarServicio(Long id) {
         if (!servicioRepository.existsById(id)) {
             throw new ResourceNotFoundException("Servicio no encontrado");
         }
-
         servicioRepository.deleteById(id);
     }
 }
